text editor is going really crazy! #36656

Closed
opened 2013-09-04 05:00:30 +02:00 by Yousef Harfoush · 8 comments

%%%--- Operating System, Graphics card ---
windows 8 x64, nvidia 8600 gt

- Blender version with error, and version that worked ---

r59726 built with mingW x64, didn't check

- Short description of error ---

text editor deletes next lines on undo

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

in the attached file:
copy everything
paste it were mentioned in the script
press ctrl+z to undo

%%%

%%%--- Operating System, Graphics card --- windows 8 x64, nvidia 8600 gt - Blender version with error, and version that worked --- r59726 built with mingW x64, didn't check - Short description of error --- text editor deletes next lines on undo - Steps for others to reproduce the error (preferably based on attached .blend file) --- in the attached file: copy everything paste it were mentioned in the script press ctrl+z to undo %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Confirmed as described and with an added py template file in text editor.
2.68a r58536 official release
Ubuntu 32 bit%%%

%%%Confirmed as described and with an added py template file in text editor. 2.68a r58536 official release Ubuntu 32 bit%%%
Member

%%%@Campbell: Had a look at the text editor undo code, but it's a creepy C string maze ... This may just be a limitation of how the undo works?%%%

%%%@Campbell: Had a look at the text editor undo code, but it's a creepy C string maze ... This may just be a limitation of how the undo works?%%%
Author
Member

%%%that is seriously bad, this makes you loose work working with the editor, another bug "if i should file another one tell me" :
shift + left or right arrow doesn't continue to select instead it releases the selection after each 1st char you select

just type any text and try to select it with shift + left or right arrow

these are seriously show stoppers, as they render the text editor useless.%%%

%%%that is seriously bad, this makes you loose work working with the editor, another bug "if i should file another one tell me" : shift + left or right arrow doesn't continue to select instead it releases the selection after each 1st char you select just type any text and try to select it with shift + left or right arrow these are seriously show stoppers, as they render the text editor useless.%%%

%%%Assigning to Justin.%%%

%%%Assigning to Justin.%%%
Member

%%%Committed r59856 fix for undoing paste, and for shift + left/right%%%

%%%Committed r59856 fix for undoing paste, and for shift + left/right%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

%%%ok it is fixed, thanks a lot.%%%

%%%ok it is fixed, thanks a lot.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36656
No description provided.